--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img id="logo" src="img/logo.jpg" alt="">
             <ul class="menu-list">
                 <li><a class="menu-list-items" href="#">Home</a></li>
-                <li><a class="menu-list-items" href="#">Program</a></li>
+                <li><a class="menu-list-items" href="#program">Program</a></li>
                 <li><a class="menu-list-items" href="#">About</a></li>
                 <li><a class="menu-list-items" href="#">Sponsors</a></li>
                 <li><a class="menu-list-items" href="#">News</a></li>
@@ -28,9 +28,34 @@
     </header>
     <main>
         <section class="introduction">
-            <h1>A New Wave of English Language exams on your Campus - IELTS</h1>
-            <h2>2011 NCTA Annual Conference San Diego, CA</h2>
-            <a href="https://www.ielts.org/">www.ielts.org</a>
+            <h1 class="intro-text">A New Wave of English Language exams on your Campus - IELTS</h1>
+            <h2 class="intro-text2">2011 NCTA Annual Conference San Diego, CA</h2>
+            <a class="ielts-link" href="https://www.ielts.org/" target="_blank">www.ielts.org</a>
+        </section>
+        <section class="our-program" id="program">
+            <h3 class="our-program-header">Our program</h3>
+            <div class="our-program-cards-container">
+                <div class="our-program-cards">
+                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                </div>
+
+                <div class="our-program-cards">
+                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                </div>
+                    
+                <div class="our-program-cards">
+                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                </div>
+
+                <div class="our-program-cards">
+                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                </div>
+
+                <div class="our-program-cards">
+                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                </div>
+            </div>
+            <a class="our-program-join-btn" href="">Join</a>
         </section>
     </main>
 </body>
