Build featured speakers section and finish with its functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"/>
     <script src="script.js" defer></script>
     <title>Main Page</title>
 </head>
@@ -36,26 +37,36 @@
             <h3 class="our-program-header">Our program</h3>
             <div class="our-program-cards-container">
                 <div class="our-program-cards">
-                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                    <i class="fas fa-book icons"></i>
+                    <h6>USEFUL BOOKS</h6>
+                    <p class="our-program-paragraph">Practising Cambridge 1-16 practice Test books and Road to IELTS books.</p>
                 </div>
 
                 <div class="our-program-cards">
-                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                    <i class="fas fa-lightbulb icons"></i>
+                    <h6>INSIGHTS</h6>
+                    <p class="our-program-paragraph">Having a good rest one day before exam and drinking a good amount of water before exam.</p>
                 </div>
                     
                 <div class="our-program-cards">
-                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                    <i class="fas fa-exclamation icons"></i>
+                    <h6>MISTAKES</h6>
+                    <p class="our-program-paragraph">Some students do Cambridge practice tests and they think doing tests on an on will improve their English but it does not.</p>
                 </div>
 
                 <div class="our-program-cards">
-                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                    <i class="fas fa-chess icons"></i>
+                    <h6>STRATEGY</h6>
+                    <p class="our-program-paragraph">Skimming and Scanning techbiques for Reading and key word searching</p>
                 </div>
 
                 <div class="our-program-cards">
-                    <p class="our-program-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, mollitia?</p>
+                    <i class="fas fa-clock icons"></i>
+                    <h6>TIME-MANAGEMENT</h6>
+                    <p class="our-program-paragraph">Starting from 3-Paragraph in Reading test will help to save sometime</p>
                 </div>
             </div>
-            <a class="our-program-join-btn" href="">Join</a>
+            <a class="our-program-join-btn" href="https://slideplayer.com/slide/5727561/" target="_blank">Join the conference</a>
         </section>
     </main>
 </body>
