Build for desktop

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
     <header>
         <nav class="navbar">
+            <div id="navbar-social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <span>English</span>
+                <span>My Page</span>
+                <span>Logout</span>
+            </div>
             <div class="hamburger-menu">
                 <div class="hamburger-items1"></div>
                 <div class="hamburger-items2"></div>
@@ -24,6 +31,7 @@
                 <li><a class="menu-list-items" href="#">About</a></li>
                 <li><a class="menu-list-items" href="#">Sponsors</a></li>
                 <li><a class="menu-list-items" href="#">News</a></li>
+                <li><a class="menu-list-items" href="#">CC Campaign</a></li>
             </ul>
         </nav>
     </header>
@@ -69,5 +77,19 @@
             <a class="our-program-join-btn" href="https://slideplayer.com/slide/5727561/" target="_blank">Join the conference</a>
         </section>
     </main>
+    <footer>
+        <section class="partners">
+            <h3 id="partner">Partner</h3>
+            <div class="collaborators-container">
+                <span class="partner-items">Bc</span>
+                <span class="partner-items">Idp</span>
+                <span class="partner-items">TOEFL</span>
+                <span class="partner-items">GMAT</span>
+            </div>
+        </section>
+        <section class="ending-page">
+            <!-- <img class="ending-page-logo" src="img/logo.jpg" alt=""> -->
+        </section>
+    </footer>
 </body>
 </html>
