Remove unused images and work with spacing

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
-            <div id="navbar-social-icons">
+        <div id="navbar-social-icons">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
                 <span>English</span>
                 <span>My Page</span>
                 <span>Logout</span>
             </div>
+        <nav class="navbar">
             <div class="hamburger-menu">
                 <div class="hamburger-items1"></div>
                 <div class="hamburger-items2"></div>
                 <div class="hamburger-items3"></div>
             </div>
-            <img id="logo" src="img/logo.jpg" alt="">
+            <img id="logo" src="img/myLogo.png" alt="">
             <ul class="menu-list">
                 <li><a class="menu-list-items" href="#">Home</a></li>
                 <li><a class="menu-list-items" href="#program">Program</a></li>
                 <li><a class="menu-list-items" href="#">About</a></li>
                 <li><a class="menu-list-items" href="#">Sponsors</a></li>
                 <li><a class="menu-list-items" href="#">News</a></li>
-                <li><a class="menu-list-items" href="#">CC Campaign</a></li>
+                <li><a class="menu-list-items campaign" href="#">CC Campaign</a></li>
             </ul>
         </nav>
     </header>
@@ -88,7 +88,7 @@
             </div>
         </section>
         <section class="ending-page">
-            <!-- <img class="ending-page-logo" src="img/logo.jpg" alt=""> -->
+            <img class="ending-page-logo" src="img/myLogo.png" alt="">
         </section>
     </footer>
 </body>
