--- a/index.html
+++ b/index.html
@@ -81,14 +81,16 @@
         <section class="partners">
             <h3 id="partner">Partner</h3>
             <div class="collaborators-container">
-                <span class="partner-items">Bc</span>
-                <span class="partner-items">Idp</span>
-                <span class="partner-items">TOEFL</span>
-                <span class="partner-items">GMAT</span>
+                <img class="britishcouncil" src="img/britishcouncil.svg" alt="">
+                <img class="cambridgeassessment" src="img/cambridgeassessment.svg" alt="">
+                <img class="idp" src="img/idp.svg" alt="">
             </div>
         </section>
         <section class="ending-page">
-            <img class="ending-page-logo" src="img/myLogo.png" alt="">
+            <img class="ending-page-logo" src="img/whitelogo.png" alt="">
+            <p id="ending-paragraph">If you are looking to work, live or study in an English-speaking country, then you must be able to demonstrate a high level of English language ability.
+                anada, New Zealand and the UK. It is globally recognised.
+            </p>
         </section>
     </footer>
 </body>
