Start About page and finish about logo section for mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="menu-list">
                 <li><a class="menu-list-items" href="#">Home</a></li>
                 <li><a class="menu-list-items" href="#program">Program</a></li>
-                <li><a class="menu-list-items" href="#">About</a></li>
+                <li><a class="menu-list-items" href="about.html">About</a></li>
                 <li><a class="menu-list-items" href="#">Sponsors</a></li>
                 <li><a class="menu-list-items" href="#">News</a></li>
                 <li><a class="menu-list-items campaign" href="#">CC Campaign</a></li>
