Finish About page mobile version

--- a/about.html
+++ b/about.html
@@ -53,9 +53,28 @@
             </div>
         </section>
         <section class="see-past-section">
-            <h2>See the past IELTS NCTA Conferences</h2>
-            <p>Take a look at the 2 last Conferences of IELTS</p>
+            <h2 class="see-past-header">See IELTS Conference organizers</h2>
+            <p class="see-past-p">Take a look at the 2  Conference Organizers of IELTS</p>
+            <div class="see-past-img-container">
+                <img class="see-past-img" src="img/britishcounciloffice.jpg" alt="">
+                <img class="see-past-img2" src="img/idpoffice.jpg" alt="">
+            </div>
         </section>
     </main>
+    <footer class="footer">
+        <section class="partners">
+            <h3 id="partner">Partner</h3>
+            <div class="collaborators-container">
+                <img class="britishcouncil" src="img/britishcouncil.svg" alt="">
+                <img class="cambridgeassessment" src="img/cambridgeassessment.svg" alt="">
+                <img class="idp" src="img/idp.svg" alt="">
+            </div>
+        </section>
+        <section class="ending-page">
+            <img class="ending-page-logo" src="img/whitelogo.png" alt="">
+            <p id="ending-paragraph">If you are looking to work, live or study in an English-speaking country.
+            </p>
+        </section>
+    </footer>
 </body>
 </html>
