--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 Your ability to listen, read, write and speak in English will be assessed during the test.
             </p>
             <p class="about-contact-p">Please contact us per Email for any further questions about NCTA Annual IELTS Conference!</p>
-            <a id="about-contact-link" href="https://www.ielts.org/about-ielts/what-is-ielts" target="_blank">stakeholder@ieltsusa.org</a>
+            <a id="about-contact-link" href="https://www.ielts.org/about-ielts/what-is-ielts" target="_blank">stakeholder@ieltsusa.org<i class="fas fa-chevron-right link"></i></a>
         </section>
         <section class="about-logo-section">
             <h2 class="about-logo-header">IELTS 2011 NCTA Annual Conference Logo</h2>
@@ -71,7 +71,7 @@
             </div>
         </section>
         <section class="ending-page">
-            <img class="ending-page-logo" src="img/whitelogo.png" alt="">
+            <img class="ending-page-logo" src="img/brownaboutlogo.png" alt="">
             <p id="ending-paragraph">If you are looking to work, live or study in an English-speaking country.
             </p>
         </section>
