Add icons and UX transitions

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 Your ability to listen, read, write and speak in English will be assessed during the test.
             </p>
             <p class="about-contact-p">Please contact us per Email for any further questions about NCTA Annual IELTS Conference!</p>
-            <a id="about-contact-link" href="https://www.ielts.org/about-ielts/what-is-ielts" target="_blank">stakeholder@ieltsusa.org<i class="fas fa-chevron-right link"></i></a>
+            <a id="about-contact-link" href="https://www.ielts.org/about-ielts/what-is-ielts" target="_blank">stakeholder@ieltsusa.org<i class="fas fa-chevron-right link" id="icon-link"></i></a>
         </section>
         <section class="about-logo-section">
             <h2 class="about-logo-header">IELTS 2011 NCTA Annual Conference Logo</h2>
