--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"/>
     <script src="about.js" defer></script>
     <title>About</title>
@@ -76,5 +78,8 @@
             </p>
         </section>
     </footer>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
