--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="introduction">
             <h1 class="intro-text">A New Wave of English Language exams on your Campus - IELTS</h1>
             <h2 class="intro-text2">2011 NCTA Annual Conference San Diego, CA</h2>
-            <a class="ielts-link" href="https://www.ielts.org/" target="_blank">www.ielts.org</a>
+            <a class="ielts-link" rel="noopener noreferrer" href="https://www.ielts.org/" target="_blank">www.ielts.org</a>
         </section>
         <section class="our-program" id="program">
             <h3 class="our-program-header">Our program</h3>
@@ -74,7 +74,7 @@
                     <p class="our-program-paragraph">Starting from 3-Paragraph in Reading test will help to save sometime</p>
                 </div>
             </div>
-            <a class="our-program-join-btn" href="https://slideplayer.com/slide/5727561/" target="_blank">Join the conference</a>
+            <a class="our-program-join-btn" rel="noopener noreferrer" href="https://slideplayer.com/slide/5727561/" target="_blank">Join the conference</a>
         </section>
     </main>
     <footer>
