Fix linter errors

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section class="ending-page">
-            <img class="ending-page-logo" src="img/brownaboutlogo.png" alt="">
+            <img class="ending-page-logo" src="img/whitelogo.png" alt="">
             <p id="ending-paragraph">If you are looking to work, live or study in an English-speaking country, then you must be able to demonstrate a high level of English language ability.
                 anada, New Zealand and the UK. It is globally recognised.
             </p>
